refactor: replace Collections.unmodifiable with copyOf methods